--- a/GE.WebUI/Areas/Admin/Views/Steam/_GridViewApp.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Steam/_GridViewApp.cshtml
@@ -3,8 +3,9 @@
 @Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<VMSteamApp>()
 {
     Columns = new SxExtantions.SxGridViewColumn<VMSteamApp>[] {
-        new SxExtantions.SxGridViewColumn<VMSteamApp>() { Caption="AppId", FieldName="AppId"},
-        new SxExtantions.SxGridViewColumn<VMSteamApp>() { Caption="Name", FieldName="Name"},
+        new SxExtantions.SxGridViewColumn<VMSteamApp>() { Caption="Идентификатор", FieldName="AppId"},
+        new SxExtantions.SxGridViewColumn<VMSteamApp>() { Caption="Наименование", FieldName="Name"},
     },
-    DataAjaxUrl=Url.Action("AppIndex", "Steam")
+    DataAjaxUrl=Url.Action("AppIndex", "Steam"),
+    ShowPagerInfo=true
 })
