--- a/GE.WebUI/Areas/Admin/Views/Steam/AppIndex.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Steam/AppIndex.cshtml
@@ -32,6 +32,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" id="steam-app-list-cancel-btn" data-dismiss="modal">Отмена</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
     </div>
