Привзка игр к steam

--- a/GE.WebUI/Areas/Admin/Views/Games/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Games/Index.cshtml
@@ -9,10 +9,15 @@
     @Html.Partial("_GridView", Model)
 </div>
 
+@Html.Partial("_ModalSteamApps")
+
 @section scripts{
+    <script src="~/Areas/Admin/Scripts/games.js"></script>
     <script>
         $(function () {
             var grid = new SxGridView('#grid-games');
+
+            var games = new Games('@Url.Action("AppIndexFree", "Steam")', '@Url.Action("AddSteamApp", "Games")', '@Url.Action("DeleteSteamApp", "Games")', grid);
         });
     </script>
 }
