--- a/GE.WebUI/Areas/Admin/Views/Games/_GridView.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Games/_GridView.cshtml
@@ -4,11 +4,11 @@
     new SxExtantions.SxGridViewSettings<VMGame>
     {
         Columns = new SxExtantions.SxGridViewColumn<VMGame>[]{
-            new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Title", Caption="Наименование игры", Template=x=>$"<b>{x.Title}</b>{(x.SteamApp!=null ? $"</br>&nbsp;&nbsp;&nbsp;<small class=text-muted> {x.SteamApp.Name}</small>":null)}"},
+            new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Title", Caption="Наименование игры"},
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="TitleAbbr", Caption="Краткое наименование игры"},
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Description", Caption="Описание"},
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Show", Caption="Показывать", Template=m=> m.Show? "Да":"Нет"},
-            new SxExtantions.SxGridViewColumn<VMGame>() { FieldName="Id", Caption="Stem функционал", EnableFiltering=false, EnableSorting=false, Template=x=> $"<button class=\"btn btn-xs btn-{(x.SteamAppId.HasValue?"danger del-game-steam-app-btn" : "primary")}\" {(x.SteamAppId.HasValue?"":"data-toggle=modal data-target=#modal-steam-apps")}>Steam <i class=\"fa fa-{(x.SteamAppId.HasValue?"times":"steam-square")}\" area-hidden=\"true\"></i></button>", ColumnCssClass=x=>"col-cm" }
+            new SxExtantions.SxGridViewColumn<VMGame>() { FieldName="Id", Caption="Steam функционал", EnableFiltering=false, EnableSorting=false, Template=x=> (x.SteamAppsCount>0?$"<button class=\"btn btn-xs btn-info\" data-toggle=\"modal\" data-target=\"#modal-linked-steam-apps\" style=\"margin-right:5px\">{x.SteamAppsCount}</button>":null) + $"<button class=\"btn btn-xs btn-primary\" data-toggle=\"modal\" data-target=\"#modal-steam-apps\"> Steam</button>", ColumnCssClass=x=>"text-center"}
         },
         DataAjaxUrl = Url.Action("Index", "Games"),
         RowCssClass = x => !x.Show ? "warning" : null,
@@ -17,6 +17,6 @@
         EnableEditing = true,
         EditRowUrl = x => Url.Action("Edit", "Games", new { id = x.Id }),
         ShowPagerInfo = true,
-        RowId=x=>x.Id.ToString()
+        RowId = x => x.Id.ToString()
     }
     )
