--- a/GE.WebUI/Areas/Admin/Views/Games/_GridView.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Games/_GridView.cshtml
@@ -4,11 +4,11 @@
     new SxExtantions.SxGridViewSettings<VMGame>
     {
         Columns = new SxExtantions.SxGridViewColumn<VMGame>[]{
+            new SxExtantions.SxGridViewColumn<VMGame>() { FieldName="Id", Caption="#", Template=x=>$"<div class=\"btn-group\"><button type=\"button\" class=\"btn btn-default btn-sm dropdown-toggle\" data-toggle=\"dropdown\" aria-haspopup=\"true\" aria-expanded=\"false\"> Действия <span class=\"caret\"></span></button><ul class=\"dropdown-menu\"><li class=\"dropdown-header\">Привязки Steam</li><li><li><a href=\"#\" data-toggle=\"modal\" data-target=\"#modal-steam-apps\">Привязать SteamApp</a></li><li><a href=\"#\" data-toggle=\"modal\" data-target=\"#modal-linked-steam-apps\">Править SteamApp <button class=\"btn btn-xs btn-primary\">{(x.SteamAppsCount)}</button></a></li><li class=\"dropdown-header\">Новости Steam</li><li role = \"separator\" class=\"divider\"></li><li><a href = \"#\" > Separated link</a></li>  </ul></div>", ColumnCssClass=x=>"col-cm", EnableFiltering=false, EnableSorting=false },
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Title", Caption="Наименование игры"},
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="TitleAbbr", Caption="Краткое наименование игры"},
             new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Description", Caption="Описание"},
-            new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Show", Caption="Показывать", Template=m=> m.Show? "Да":"Нет"},
-            new SxExtantions.SxGridViewColumn<VMGame>() { FieldName="Id", Caption="Steam функционал", EnableFiltering=false, EnableSorting=false, Template=x=> (x.SteamAppsCount>0?$"<button class=\"btn btn-xs btn-info\" data-toggle=\"modal\" data-target=\"#modal-linked-steam-apps\" style=\"margin-right:5px\">{x.SteamAppsCount}</button>":null) + $"<button class=\"btn btn-xs btn-primary\" data-toggle=\"modal\" data-target=\"#modal-steam-apps\"> Steam</button>", ColumnCssClass=x=>"text-center"}
+            new SxExtantions.SxGridViewColumn<VMGame>(){FieldName="Show", Caption="Показывать", Template=m=> m.Show? "Да":"Нет"}
         },
         DataAjaxUrl = Url.Action("Index", "Games"),
         RowCssClass = x => !x.Show ? "warning" : null,
