--- a/GE.WebUI/Areas/Admin/Views/Steam/AppIndex.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Steam/AppIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model VMSteamApp[]
 
 @{
-    ViewBag.Title = "Игры Steam";
+    ViewBag.Title = "Приложения Steam";
 }
 
 <h2>@ViewBag.Title</h2>
