--- a/GE.WebUI/Areas/Admin/Views/Games/_ModalLinkedSteamApps.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Games/_ModalLinkedSteamApps.cshtml
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Удаление привязок Steam от игры</h4>
+                <h4 class="modal-title">Управление привязками приложений Steam для игры</h4>
             </div>
             <div class="modal-body">
                 <input type="hidden" name="GameId" />
