--- a/GE.WebUI/Views/Games/_LastMaterials.cshtml
+++ b/GE.WebUI/Views/Games/_LastMaterials.cshtml
@@ -13,7 +13,7 @@
                 item = Model[i];
                 <li>
                     <span class="time">@item.DateOfPublication.ToString("dd.MM.yyyy")</span><br />
-                    <a href="@item.GetUrl(Url)">@item.Title</a>
+                    <a href="@item.GetUrl(Url)" target="_blank">@item.Title</a>
                 </li>
             }
         </ul>
