https://github.com/EugeneKormin/Game-exe/issues/307

--- a/GE.WebUI/Areas/Admin/Views/News/EditorTemplates/VMNews.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/News/EditorTemplates/VMNews.cshtml
@@ -10,6 +10,7 @@
     @Html.HiddenFor(x => x.ViewsCount)
     @Html.HiddenFor(x => x.DateCreate)
     @Html.HiddenFor(x => x.DateUpdate)
+    @Html.HiddenFor(x => x.SteamNewsGid)
 
     <div class="form-group">
         <div class="row">
