--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -24,10 +24,10 @@
     @Html.Partial("_Foreword", Model)
 
     <div class="m-html">
-        @Html.Action("Popular", "News", new {mct = Model.ModelCoreType, mid = Model.Id, amount = 4})
+        @Html.Action("Popular", "News", new { mct = Model.ModelCoreType, mid = Model.Id, amount = 4 })
         @if (Model.FrontPictureId.HasValue && Model.ShowFrontPictureOnDetailPage)
         {
-            <img class="f-picture" alt="@Model.Title" src="@Url.Action("Picture", "Pictures", new {id = Model.FrontPictureId})"/>
+            <img class="f-picture" alt="@Model.Title" src="@Url.Action("Picture", "Pictures", new {id = Model.FrontPictureId})" />
         }
         @Html.Raw(Model.Html)
     </div>
@@ -44,39 +44,44 @@
         @Html.Partial("_MaterialInfo", Model)
     </div>
 
-        @*aphorisms*@
-        <div id="rnd-aphorisms">
-            @{Html.RenderAction("Random", "Aphorism"); }
-        </div>
+    @*subscribe*@
+    <div id="subscribe-block">
+        @Html.Action("Subscribe", "Subscribers")
+    </div>
 
-        @Html.Action("RelatedMaterials", "News", new { MaterialId = Model.Id, ModelCoreType = Model.ModelCoreType })
+    @*aphorisms*@
+    <div id="rnd-aphorisms">
+        @{Html.RenderAction("Random", "Aphorism"); }
+    </div>
 
-        @{
-            banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
-            if (banner != null)
+    @Html.Action("RelatedMaterials", "News", new { MaterialId = Model.Id, ModelCoreType = Model.ModelCoreType })
+
+    @{
+        banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
+        if (banner != null)
+        {
+            if (!(Equals(banner.Type, SxBanner.BannerType.Google) && Request.IsLocal) || Equals(banner.Type, SxBanner.BannerType.Html))
             {
-                if (!(Equals(banner.Type, SxBanner.BannerType.Google) && Request.IsLocal) || Equals(banner.Type, SxBanner.BannerType.Html))
-                {
-                    <div style="margin-top:30px;">
-                        @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
-                    </div>
-                }
+                <div style="margin-top:30px;">
+                    @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
+                </div>
             }
         }
+    }
 
-        @if (Model.MaterialTags.Any())
-        {
-            @Html.Partial("_TagsCloud", Model.MaterialTags, new ViewDataDictionary { { "TagsShowHeader", true }, { "TagsMaxFs", 30 }, { "ControllerName", "News" }, { "ActionName", "List" } })
-        }
+    @if (Model.MaterialTags.Any())
+    {
+        @Html.Partial("_TagsCloud", Model.MaterialTags, new ViewDataDictionary { { "TagsShowHeader", true }, { "TagsMaxFs", 30 }, { "ControllerName", "News" }, { "ActionName", "List" } })
+    }
 
-        <div id="by-date-mat">
-            @Html.Action("ByDateMaterial", "News", new { mid = Model.Id, mct = Model.ModelCoreType })
-        </div>
-
-        <br />
-        @Html.Action("Edit", "Comments", new { mid = Model.Id, mct = Model.ModelCoreType })
-
+    <div id="by-date-mat">
+        @Html.Action("ByDateMaterial", "News", new { mid = Model.Id, mct = Model.ModelCoreType })
     </div>
+
+    <br />
+    @Html.Action("Edit", "Comments", new { mid = Model.Id, mct = Model.ModelCoreType })
+
+</div>
 
 
 @section scripts{
@@ -91,7 +96,7 @@
         loadScriptOnce('https://www.youtube.com/iframe_api');
         $(function () {
             var geRndAphorisms = new GeRndAphorisms('#rnd-aphorisms', '#rnd-aphorism-btn-next', '@Url.Action("Random", "Aphorism")', function () {
-                
+
             });
             geRndAphorisms.initialize();
 
