--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -22,13 +22,13 @@
         bh="Последние статьи"
     })*@
 
-@*@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })*@
+@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })
 
-@*@Html.Action("NewsCategories", new { controller = "News", lnc = 5 })*@
+@*@Html.Action("NewsCategories", "News", new { lnc = 5 })*@
 
-@*<div class="text-center all-news-btn">
-        <a href="@Url.Action("List", "News")" class="btn btn-default btn-transparent white">Все новости</a>
-    </div>*@
+<div class="text-center all-news-btn">
+    <a href="@Url.Action("List", "News")" class="btn btn-default btn-transparent white">Все новости</a>
+</div>
 
 @{
     @*banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
