--- a/GE.WebUI/less/last-news-block.less
+++ b/GE.WebUI/less/last-news-block.less
@@ -12,6 +12,10 @@
     transition: all 0.2s;
 }
 
+.l-n-b{
+    margin-bottom:@def-pad*2;
+}
+
 .l-n-b .row {
     display: table;
     width: 100%;
