--- a/GE.WebUI/less/list-news.less
+++ b/GE.WebUI/less/list-news.less
@@ -4,188 +4,184 @@
 @import (reference) "../bower_components/bootstrap/less/variables.less";
 
 .list-news {
-    height:100%;
-    display:inline-table;
-    border-radius:3px;
-    background: linear-gradient(to left,rgba(255,255,255,.3),rgba(255,255,255,.2),rgba(255,255,255,.1));
-    border: 1px solid rgba(255,255,255,.1);
-    width:100%;
-    color:@color-white;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    font-size: 0;
+    color: @color-white;
+    margin-right: -@def-pad;
+    margin-left: -@def-pad;
+}
+
+.list-news a {
+    color: inherit !important;
+}
+
+.list-news__item-container {
+    font-size: 14px;
+    width: 50%;
+    display: inline-block;
+    vertical-align: top;
+
     @media (max-width: @screen-xs-max) {
-        margin-top: @def-pad*2;
         width:100%;
         display:block;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+       
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.list-news > .row {
+.list-news-item {
+    background: linear-gradient(to left,rgba(255,255,255,.3),rgba(255,255,255,.2),rgba(255,255,255,.1));
+    border: 1px solid rgba(255,255,255,.1);
     display:table;
-    height:100%;
+    margin-top: @def-pad*2;
+    margin-right: @def-pad;
+    margin-left: @def-pad;
+    border-radius:3px;
+
+    @media (max-width: @screen-xs-max) {
+        
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+       
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
-.list-news > .row > div{
-    display:table-cell;
-    float:none;
+.list-news-item-part {
+    width: 50%;
+    display: table-cell;
     vertical-align: top;
     @media (max-width: @screen-xs-max) {
-        display: inline-block;
-        float:left;
-        width:100%;
-        vertical-align: unset;
+        
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        width:100%;
+        display:block;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.list-news figure {
-    overflow: hidden;
-    position: absolute;
+.list-news-item__image img {
     width: 100%;
-    height:100%;
-    background-size:cover;
-    background-position:center center;
+}
+
+.list-news-item__content {
+    padding: @def-pad;
+    position:relative;
+}
+
+.list-news__date {
+    font-size: 18px;
     @media (max-width: @screen-xs-max) {
-        position:unset;
-        height:auto !important;
-        min-height:170px;
-        background-position:unset;
+        font-size:16px;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        font-size:16px;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        font-size:16px;
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.list-news figure > a{
-    position:absolute;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
-}
-
-.list-news figure > img {
-    height: 100%;
-    /*.centerHorizontal;*/
-    @media (max-width: @screen-xs-max) {
-        height:auto;
-        width:100%;
-    }
-
-    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    }
-
-    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-    }
-
-    @media (min-width: @screen-lg-min) {
-    }
-}
-
-.list-news .content {
-    padding: 10px;
-    padding-left: @def-pad;
-}
-
-.list-news .content time{
-    font-size:18px;
-}
-
-.list-news .content .link {
-    font-size: 22px;
-    color: @color-muted-blue;
-    font-weight: 700;
+.list-news__title a {
     line-height: 1;
+    font-size: 20px;
+    font-weight: 700;
+    color: @color-muted-blue !important;
     display: block;
-}
-
-.list-news .content .foreword{
-    margin-top:@def-pad;
-    font-size:0.9em;
-}
-
-.list-news .btn-transparent{
     @media (max-width: @screen-xs-max) {
+        font-size:17px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        font-size:17px;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        font-size:17px;
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+.list-news__fwd {
+    font-size: .9em;
+    padding:10px 0;
+    @media (max-width: @screen-xs-max) {
+        height:6.4em;
+        overflow:hidden;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        height:6.4em;
+        overflow:hidden;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        height:6.4em;
+        overflow:hidden;
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+.list-news__info{
+    position:absolute;
+    bottom:@def-pad;
+    line-height:1;
+    @media (max-width: @screen-xs-max) {
+        position:relative;
+        bottom:0;
         margin-top:@def-pad;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        position:relative;
+        bottom:0;
+        margin-top:@def-pad;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.list-news-container .sx-list.t-mode {
-    margin-top:@def-pad*2;
-    @media (max-width: @screen-xs-max) {
-        margin: 0 !important;
-    }
-
-    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    }
-
-    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-    }
-
-    @media (min-width: @screen-lg-min) {
-    }
-}
-
-.list-news-container  .sx-list > .row {
-    @media (max-width: @screen-xs-max) {
-        display: inline-block !important;
-        margin: 0 !important;
-        width:100%;
-    }
-
-    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    }
-
-    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-    }
-
-    @media (min-width: @screen-lg-min) {
-    }
-}
-
-.list-news-container .sx-list > .row > div {
-    @media (max-width: @screen-xs-max) {
-        display: inline-block !important;
-        width:100%;
-        padding:0 !important;
-    }
-
-    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    }
-
-    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-    }
-
-    @media (min-width: @screen-lg-min) {
-    }
+.list-news__info a{
+    color: @color-muted-blue !important;
+    font-weight:700;
 }
