--- a/GE.WebUI/less/last-news-block.less
+++ b/GE.WebUI/less/last-news-block.less
@@ -231,6 +231,13 @@
     height: 100%;
 }
 
+.l-n-b .content .games-wrapper ul > li > .game-title {
+    font-size: 13px;
+    position: relative;
+    top: -2px;
+    font-weight: 700;
+}
+
 .l-n-b .content .games-wrapper ul > li > a > figure, .l-n-b .content .games-wrapper ul > li > a > figure > img {
     height: 100%;
     overflow: hidden;
@@ -330,7 +337,7 @@
     padding: 0;
     margin: 0 !important;
     position: absolute;
-    top: 0;
+    top: @def-pad;
     width: 100%;
     padding-right: @def-pad;
     background-color: @color-game-menu;
