--- a/GE.WebUI/less/for-gamers-block.less
+++ b/GE.WebUI/less/for-gamers-block.less
@@ -196,19 +196,19 @@ f-g-b .games > li > a:hover {
     background-position:center center;
     background-size:cover;
     @media (max-width: @screen-xs-max) {
-        height:210px;
+        height:300px;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        height:210px;
+        height:461px;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        height:170px;
+        height:292px;
     }
 
     @media (min-width: @screen-lg-min) {
-        height:190px;
+        height:367px;
     }
 }
 
@@ -239,6 +239,7 @@ f-g-b .games > li > a:hover {
 .pv-article .foreword{
     font-size:13px;
     font-family:Arial;
+    text-align:justify;
 }
 
 .f-g-b .btn-transparent.red {
